--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: rgb(174, 183, 226);
 }
 
 /* ----------------- Methods  ----------------- */
